# system-resource-monitor

./: CMakeLists.txt  CMakeLists.txt.user.25d6817  CMakeLists.txt.user.c3d99fb  CpuMonitorUsage.cpp  CpuMonitorUsage.h  DiskInfo.cpp  DiskInfo.h  MainWindow.cpp  MainWindow.h  Network.cpp  Network.h  PageCustomization.cpp  PageCustomization.h  ProcessInfo.cpp  ProcessInfo.h  ProcessUsage.cpp  ProcessUsage.h  RamUsage.cpp  RamUsage.h  UsageGraph.cpp  UsageGraph.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
